[tool.poetry]
name = "burgeramt-appointments-websockets"
version = "0.1.0"
description = "Bürgeramt appointment finder"
authors = ["Dror Atariah <drorata@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "burgeramt_appointments_websockets"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.0"
pytz = "^2023.2"
requests = "^2.28.2"
websockets = "^10.4"
lxml = "^4.9.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
